~~~~~~~~~~~~~~~~~

   o new parameter type "Chord2" provides an alternative set of 32 chords

   o CPU load display has been re-adjusted for LPC17 and STM32F4

   o hwcfg/wilba*/MBSEQ_HW.V4: default F1-F4 assignments changed to:
     F1: Bookmark, F2: Record, F3: Tap Tempo, F4: Save All

   o MBSEQ_HW.V4: added new button/LED function "FX" which changes and
     displays the FX menu

   o CC Parameter layer label now prints "#<number>" instead of "CC"

   o Jam page: AStart now starts to record into first step (as intended)

   o New option page item #10 "Initial Gate Trigger Layer" 
     (empty or trigger on each 4th step)


MIDIboxSEQ V4.090
~~~~~~~~~~~~~~~~~

   o Fx->Scale page: the configured scale is now displayed at the right
     half of the page

   o Track duplication now also possible with COPY+PASTE in UTILITY page

   o Track selections (Parameter/Trigger Layer, instrument, step view)
     can now be handled individually for each track.
     This function can be enabled in the UTILITY->Opt menu (item #9/16)

   o added BLM fader configuration to UTILITY->Opt menu (item #14/16)
     Up to 8 faders can be connected to the BLM16x16+X
     They can send a CC value either to a statically assigned Port/Chn, or to
     the Port/Chn defined by the track.

     Optionally value can be sent with inverted polarity (turn encoder beyond CC#127).

     Additional (internal) functions can be added in future.

   o BLM in keyboard mode: transpose only takes place if track not in normal
     (no transpose) mode!

   o if a track plays a sustained note, and doesn't play a step anymore
     (all gates cleared), the sustain will be cancled now

   o improved Auto Start in Jam page

   o Jam recording options are now stored/restored in/from session 
     configuration file

   o SONG button has now the same function like the SELECT button: it shows
     a configuration page. This makes it more consistent to the EDIT button.